--- a/src/main/resources/com/example/familybudget/main-view.fxml
+++ b/src/main/resources/com/example/familybudget/main-view.fxml
@@ -11,27 +11,27 @@
    <children>
       <HBox alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="NEVER">
          <children>
-            <ComboBox prefWidth="150.0" />
-            <CheckBox mnemonicParsing="false" text="с" />
-            <DatePicker maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" />
-            <CheckBox mnemonicParsing="false" text="по" />
-            <DatePicker maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" />
+            <ComboBox fx:id="typeComboBox" prefWidth="80.0" />
+            <CheckBox fx:id="fromCheckBox" mnemonicParsing="false" onAction="#fromCheckBoxAction" text="с" />
+            <DatePicker fx:id="fromDatePicker" disable="true" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" />
+            <CheckBox fx:id="toCheckBox" mnemonicParsing="false" onAction="#toCheckBoxAction" text="по" />
+            <DatePicker fx:id="toDatePicker" disable="true" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" />
          </children>
       </HBox>
-      <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+      <TableView fx:id="budgetTableView" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
         <columns>
-            <TableColumn prefWidth="75.0" text="№ п/п" />
-            <TableColumn prefWidth="75.0" text="Название" />
-          <TableColumn prefWidth="75.0" text="Тип" />
-          <TableColumn prefWidth="75.0" text="Дата" />
-            <TableColumn prefWidth="75.0" text="Сумма" />
+            <TableColumn fx:id="numberTableColumn" minWidth="-Infinity" prefWidth="75.0" text="№ п/п" />
+            <TableColumn fx:id="nameTableColumn" prefWidth="75.0" text="Название" />
+          <TableColumn fx:id="typeTableColumn" prefWidth="75.0" text="Тип" />
+          <TableColumn fx:id="dateTableColumn" prefWidth="75.0" text="Дата" />
+            <TableColumn fx:id="amountTableColumn" prefWidth="75.0" text="Сумма" />
         </columns>
       </TableView>
       <HBox alignment="CENTER" spacing="10.0" VBox.vgrow="NEVER">
          <children>
-            <Button mnemonicParsing="false" prefWidth="70.0" text="Добавить" />
-            <Button mnemonicParsing="false" text="Редактировать" />
-            <Button mnemonicParsing="false" prefWidth="70.0" text="Удалить" />
+            <Button fx:id="addButton" mnemonicParsing="false" onAction="#addButtonAction" prefWidth="70.0" text="Добавить" />
+            <Button fx:id="editButton" mnemonicParsing="false" onAction="#editButtonAction" text="Редактировать" />
+            <Button fx:id="removeButton" mnemonicParsing="false" onAction="#removeButtonAction" prefWidth="70.0" text="Удалить" />
          </children>
       </HBox>
    </children>
