--- a/src/main/resources/com/example/familybudget/input-view.fxml
+++ b/src/main/resources/com/example/familybudget/input-view.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="145.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.familybudget.controller.InputController">
+<AnchorPane prefHeight="145.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="15.0" layoutY="15.0" text="Название" />
       <Label layoutX="15.0" layoutY="45.0" text="Тип записи" />
